# Changelog

// Asciidoc template for a single table row. Copy the lines
// within //// ... //// over into the current, unreleased version
// table, select the proper icon (see legend at the bottom of this documents)
// and adapt the link to point to your pull request. Please dont forget
// the empty line separators.

////
| 🎁🐛✨🐣🗑️
|
| https://github.com/knative/client/pull/[#]
////

## v0.15.1 (2020-06-03)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Update flag names to --request and --limit
| https://github.com/knative/client/pull/872[#872]

| 🐛
| Fix `kn source -h`
| https://github.com/knative/client/pull/846[#846]

| ✨
| Update to Knative serving and eventing 0.15.0
| https://github.com/knative/client/pull/810[#810]

| 🎁
| Add `--ce-override` flag for apiserver and ping sources
| https://github.com/knative/client/pull/865[#865]

| 🐣
| Check `deletionTimestamp` for `kn revision delete`
| https://github.com/knative/client/pull/860[#860]

| 🎁
| Add `--requests` and `--limits` flags for resource requirements
| https://github.com/knative/client/pull/859[#859]

| 🐣
| Replaced non-standard errors package with standard library functions
| https://github.com/knative/client/pull/853[#853]

| 🐛
| Fix Panic for `kn source ping` describe with Sink URI
| https://github.com/knative/client/pull/848[#848]

| 🎁
| Add `kn service delete --all`
| https://github.com/knative/client/pull/836[#836]

| 🎁
| Allow plugins to extend all command groups
| https://github.com/knative/client/pull/834[#834]

| 🐣
| Update and expanded https://github.com/knative/client/blob/master/conventions/cli.md[CLI convention document]
| https://github.com/knative/client/pull/831[#831]

| 🐛
| Skip `LatestReadyRevisionName` if revision is `Pending` or `Unknown`
| https://github.com/knative/client/pull/825[#825]

| 🎁
| Add `--with-revisions` to `kn export` to allow a direct export of revisions
| https://github.com/knative/client/pull/819[#819]

| 🐛